name:               aeson-zipper
version:            0.0.1
license:            BSD3
license-file:       LICENSE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>, Alex Mason <Axman6>
maintainer:         Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>, Alex Mason <Axman6>
copyright:          Copyright (C) 2015 NICTA Limited
synopsis:           Zipper for aeson
category:           Data
description:        
  <<http://i.imgur.com/Ns5hntl.jpg>>
  .
  Zipper for aeson

homepage:           https://github.com/NICTA/aeson-zipper
bug-reports:        https://github.com/NICTA/aeson-zipper/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:NICTA/aeson-zipper.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                      base          >= 4   && < 5
                    , semigroups    >= 0.8
                    , semigroupoids >= 4.0
                    , bifunctors    >= 3.0
                    , lens          >= 4.0 && < 5
                    , aeson

  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Aeson.Zipper

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                      base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
